<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="submit">Submit</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirmation_label">Confirm Password</string>
    <string name="confirmation_hint"> Please Confirm your Password</string>
    <string name="random">Random</string>
</resources>
